--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Grichnak.github.io/Portfolio/public/index.html",
+  "homepage": "https://Grichnak.github.io/Portfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
